@@ -12,6 +12,7 @@
 * Remove new lines from values of git comments
 * Verify directory given at build is a directory
 * Support archiving directories outside the cwd.
+* Fixed bug in git repo verification on build.
 
 ## v0.4.0:
 
